--- a/src/app/pages/week/week.scss
+++ b/src/app/pages/week/week.scss
@@ -9,11 +9,11 @@
 .top-bar {
   display: flex;
   justify-content: center;
-  padding: 0.5rem;
   border-bottom: 1px solid #eee;
 
   h1 {
     font-size: 1.25rem;
+
     font-weight: 600;
     color: #6ee7b7;
   }
@@ -62,13 +62,13 @@
     margin-bottom: 0.5rem;
 
     &.high {
-      color: #dc2626; // red
+      color: #dc2626;
     }
     &.medium {
-      color: #d97706; // amber
+      color: #d97706;
     }
     &.low {
-      color: #16a34a; // green
+      color: #16a34a;
     }
   }
 
