added static level up section

--- a/src/app/pages/week/week.html
+++ b/src/app/pages/week/week.html
@@ -1,7 +1,7 @@
-<main class="week-page dark">
+<main class="journal-dark">
   <!-- Header -->
   <header class="top-bar">
-    <h1>Today</h1>
+    <h1>Todays</h1>
   </header>
 
   <!-- Progress bar -->
