changed layout theme

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -22,11 +22,11 @@
   <footer class="bottom-nav">
     <button class="tab active" routerLink="/week" routerLinkActive="active">
       ✅
-      <span>Today</span>
+      <span>Tackle</span>
     </button>
     <button class="tab">
       📅
-      <span>Week</span>
+      <span>Journey</span>
     </button>
     <button class="tab">
       🎯
