added journey page

--- a/src/app/pages/week/week.html
+++ b/src/app/pages/week/week.html
@@ -15,7 +15,7 @@
 
   <!-- High -->
   <section class="task-group">
-    <h2 class="priority high">🔥 Must Do (25 XP)</h2>
+    <h2 class="priority high">🔥 Must Do</h2>
     <ul>
       <li><input type="checkbox" /> Finish Angular component <span class="points">+25 XP</span></li>
       <li><input type="checkbox" /> Write daily journal <span class="points">+25 XP</span></li>
@@ -24,7 +24,7 @@
 
   <!-- Medium -->
   <section class="task-group">
-    <h2 class="priority medium">🌿 Nice To Do (15 XP)</h2>
+    <h2 class="priority medium">🌿 Nice To Do</h2>
     <ul>
       <li>
         <input type="checkbox" checked /> Review notes wireframe <span class="points">+15 XP</span>
@@ -34,7 +34,7 @@
 
   <!-- Low -->
   <section class="task-group">
-    <h2 class="priority low">☁️ Optional (10 XP)</h2>
+    <h2 class="priority low">☁️ Optional</h2>
     <ul>
       <li><input type="checkbox" /> Go for a run <span class="points">+10 XP</span></li>
     </ul>
