updated tackle component

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -39,7 +39,7 @@
       <span>Tackle</span>
     </button>
 
-    <button class="tab">
+    <button class="tab" routerLink="/journey" routerLinkActive="active">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="24"
@@ -75,7 +75,7 @@
         <path d="M4 20a8 8 0 0 1 16 0" />
       </svg>
 
-      <span>Yearly</span>
+      <span>Done pile</span>
     </button>
     <button class="tab">
       <svg
