--- a/src/app/pages/week/week.html
+++ b/src/app/pages/week/week.html
@@ -15,7 +15,7 @@
 
   <!-- High -->
   <section class="task-group">
-    <h2 class="priority high">🔥 Must Do</h2>
+    <h2 class="priority high">🔥 Up next</h2>
     <ul>
       <li><input type="checkbox" /> Finish Angular component <span class="points">+25 XP</span></li>
       <li><input type="checkbox" /> Write daily journal <span class="points">+25 XP</span></li>
