added profile tab link

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -77,7 +77,7 @@
 
       <span>Done pile</span>
     </button>
-    <button class="tab">
+    <button class="tab" routerLink="/profile" routerLinkActive="active">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="24"
